--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   firebase_storage: ^11.2.0
   image_picker: ^0.8.7+5
   flutter_launcher_icons: ^0.13.1
+  provider: ^6.0.5
+  carousel_slider: ^4.2.1
+  shared_preferences: ^2.0.0
+  firebase_database: ^10.2.1
 
 dev_dependencies:
   flutter_test:
